[package]
name = "bevy_dtls_dev"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0.86"
bevy = "0.14.1"
bytes = "1.7.1"
rcgen = "0.13.1"
rustls = "0.23.12"
rustls-pemfile = "2.1.3"
tokio = { version = "1.39.3", features = ["full"] }
webrtc-dtls = "0.10.0"
webrtc-util = "0.9.0"
